@@ -15,6 +15,11 @@ See http://www.pserc.cornell.edu/matpower/ for more info.
 Changes since 3.0b1
 -------------------
 
+9/7/04
+    - Added OPF_P_LINE_LIM option to mpoptions to use active power
+      instead of apparent power for line limits (thanks to Pan Wei
+      for the suggestion and some code).
+
 9/1/04
     - Fixed bug in savecase.m introduced when making areas and gencost
       optional.
